IJPL-212987 [build scripts]: enabling compact headers
GitOrigin-RevId: f7c67a906b4c128e61bb55a4f6b5ba69be059a8c